# url_shortener

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-style.txt  requirements.txt
.github/workflows/: lint_test.yml
app/: __init__.py  config.py  database.py  main.py  models.py  service.py
app/core/: __init__.py  router.py  service.py
app/shorten/: __init__.py  router.py  schemas.py  service.py  utils.py
app/stats/: __init__.py  router.py  schemas.py
tests/: __init__.py  conftest.py  test_api.py  test_core.py  test_service.py  test_shorten.py
